[package]
name = "ai-usage-statistics"
version = "0.1.1"
edition = "2021"
description = "AI Usage Statistics - Track and visualize AI tool usage"
authors = ["nontracey"]
license = "MIT"

[package.metadata.deb]
maintainer = "nontracey"
depends = "$auto"
section = "utils"
priority = "optional"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
image = "0.25"
ureq = "3"
semver = "1.0"
zip = "2"
tar = "0.4"
flate2 = "1"
